-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
-- Boston, MA 02110-1301, USA.  
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.11
--------------

 * allow input parameters of components in equations
 * implementation of non-ideal microstrip cross model
 * allow equation variables in component properties
 * equations in subcircuits
 * subcircuit parameters: from equations or sweep parameters
 * twisted pair and 4-port transmission line implementation
 * bondwire model implementation
 * new Verilog-AMS device models: HICUM L2 v2.1 and FBH HBT
 * using ADMS XML scripts for Verilog-AMS device models
 * implemented excess phase of BJT during transient analysis

Version 0.0.10
--------------

 * initial conditions (transient analysis) for L and C
 * support for IC-CAP MDL files as an import file format in qucsconv
 * support for ZVR ascii data (R&S network analyzer) as an import file
   format in qucsconv
 * new function in equation solver: signum()
 * SVD algorithm as equation system solver available
 * support for CITIfile and Touchstone as an import file format in
   qucsconv

Version 0.0.9
-------------

 * selectable open/short in S-parameter component during DC
 * implementation of delay times of digital components during
   transient analysis
 * support for two-argument functions: arctan(), min() and max()
 * new functions in equation solver: ceil(), fix(), floor(), round(),
   step(), besselj(), bessely(), erf(), erfc(), cumsum(), cumavg(),
   cumprod(), sqr(), polar(), rms(), dbm2w(), w2dbm(), integrate(),
   dbm(), besseli0(), erfinv(), erfcinv(), kbd(), runavg(), variance(),
   stddev(), Time2Freq() and Freq2Time()
 * conversion of dataset to csv files using qucsconv
 * new components: AM and PM modulated and sources, relais, switch