@@ -23,6 +23,7 @@ unfixed) have a look at the file BUGS.
 
 (completed tasks are indented one tab)
 
+- Allow engineering notation in equations.
 	- Support for ZVR ascii data (R&S network analyzer) as an import
 	  file format in the Qucs Converter.
 	- Allow input parameters of components, e.g. Q1.Bf, in equations.
@@ -42,7 +43,7 @@ unfixed) have a look at the file BUGS.
 	  functions in the equation solver.
 	- Allow output of characteristics (e.g. ErEff) very likely
 	  operating points.
-- Implement knee currents Ikf and Ikr in the diode model.
+	- Implement knee currents Ikf and Ikr in the diode model.
 	- Implementation of delay times of digital components for
 	  transient simulation.
 	- QucsConv: Implementation of VCD to Qucs dataset converter.
