@@ -1,3 +1,7 @@
+2007-02-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* devices/diode.cpp: Implemented knee current parameter Ikf.
+
 2007-02-21  Stefan Jahn  <stefan@lkcc.org>
 
 	* tline4p.cpp: Implemented transient simulation model of
